font size, em->rem

--- a/dlang02.html
+++ b/dlang02.html
@@ -19,56 +19,56 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  max-width: 45em; /* 0.9 of 50 */
+  max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: 1em sans-serif;
+  font: small sans-serif;
   line-height: 1.8;
   font-weight: lighter;
 
-  margin: 2em auto;
-  padding: 0 0 10em 0;
+  margin: 2rem auto;
+  padding: 0 0 10rem 0;
 }
 
 body img {
   display: block;
-  max-width: 40em; /* 0.8 of 50 */
+  max-width: 40rem; /* 0.8 of 50 */
   margin: 0 auto;
-  padding: 0.5em 0;
+  padding: 0.5rem 0;
 }
 
 code {
-    font: 1em monospace;
+    font-family: monospace;
     color: #202020;
     background-color: #E0E0E0;
-    padding: 0.2em 0.5em;
+    padding: 0.2rem 0.5rem;
 }
 
 pre code {
     display: block;
     line-height: 1.5;
-    padding: 1.0em;
+    padding: 1.0rem;
     overflow-x: scroll;
     white-space: pre;
 }
 
 .imgcaption {
-  max-width: 35em; /* 0.7 of 50 */
-  margin: -0.5em auto 0.5em auto; /* relay img's 0.5em padding bottom*/
-  font-size: small;
+  max-width: 35rem; /* 0.7 of 50 */
+  margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
+  font-size: x-small;
   text-align: center;
   line-height: 1.5;
 }
 
 .note {
-    font: 1em monospace;
+    font-family: monospace;
     color: #202020;
     background-color: #F0E080;
-    padding: 1em;
+    padding: 1rem;
 }
 
 /* scrollbar hack #2 */
-@media screen and (max-width: 50em) {
+@media screen and (max-width: 50rem) {
     body {
         max-width: 90vw
     }
@@ -87,7 +87,7 @@ pre code {
     }
     body {
         max-width: 90%;
-        margin: 2em auto;
+        margin: 2rem auto;
     }
     body img {
         max-width: 60%;
@@ -101,7 +101,6 @@ pre code {
         white-space: pre-wrap;
     }
 }
-
 </style>
 
 <title>D lang 02: With C</title>
