rollback to more readable font weight and size

--- a/blank.html
+++ b/blank.html
@@ -15,16 +15,18 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: lighter;
+  /* font-weight: lighter; */
+  font-weight: normal;
 }
 
 body {
   max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: small sans-serif;
+  font: medium sans-serif;
   line-height: 1.8;
-  font-weight: lighter;
+  /* font-weight: lighter; */
+  font-weight: normal;
 
   margin: 2rem auto;
   padding: 0 0 10rem 0;
@@ -55,7 +57,8 @@ pre code {
 .imgcaption {
   max-width: 35rem; /* 0.7 of 50 */
   margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
-  font-size: x-small;
+  /* font-size: x-small; */
+  font-size: small;
   text-align: center;
   line-height: 1.5;
 }
