--- a/caltrain.html
+++ b/caltrain.html
@@ -16,37 +16,63 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  /* font-weight: lighter; */
   font-weight: normal;
 }
 
 body {
-  max-width: 45em; /* 0.9 of 50 */
+  max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: 1em sans-serif;
-  line-height: 1.5;
+  font: medium sans-serif;
+  line-height: 1.8;
+  /* font-weight: lighter; */
   font-weight: normal;
 
-  margin: 2em auto;
-  padding: 0 0 10em 0;
+  margin: 2rem auto;
+  padding: 0 0 10rem 0;
 }
 
 body img {
   display: block;
-  max-width: 40em; /* 0.8 of 50 */
+  max-width: 40rem; /* 0.8 of 50 */
   margin: 0 auto;
-  padding: 0.5em 0;
+  padding: 0.5rem 0;
+}
+
+code {
+    font-family: monospace;
+    color: #202020;
+    background-color: #E0E0E0;
+    padding: 0.2rem 0.5rem;
+}
+
+pre code {
+    display: block;
+    line-height: 1.5;
+    padding: 1.0rem;
+    overflow-x: scroll;
+    white-space: pre;
 }
 
 .imgcaption {
-  max-width: 35em; /* 0.7 of 50 */
-  margin: -0.5em auto 0.5em auto; /* relay img's 0.5em padding bottom*/
+  max-width: 35rem; /* 0.7 of 50 */
+  margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
+  /* font-size: x-small; */
   font-size: small;
   text-align: center;
+  line-height: 1.5;
+}
+
+.note {
+    font-family: monospace;
+    color: #202020;
+    background-color: #F0E080;
+    padding: 1rem;
 }
 
 /* scrollbar hack #2 */
-@media screen and (max-width: 50em) {
+@media screen and (max-width: 50rem) {
     body {
         max-width: 90vw
     }
@@ -59,6 +85,26 @@ body img {
     }
 }
 
+@media print{
+    html {
+        margin: 0;
+    }
+    body {
+        max-width: 90%;
+        margin: 2rem auto;
+    }
+    body img {
+        max-width: 60%;
+        margin: 0 auto;
+    }
+    .imgcaption {
+      max-width: 50%;
+    }
+    pre code {
+        overflow-x: hidden;
+        white-space: pre-wrap;
+    }
+}
 select {
     font-size: 1.5em
 }
