--- a/blank.html
+++ b/blank.html
@@ -15,17 +15,16 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /* font-weight: lighter; */
   font-weight: normal;
+  font-family: sans-serif;
 }
 
 body {
   max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: medium sans-serif;
+  font: medium serif;
   line-height: 1.8;
-  /* font-weight: lighter; */
   font-weight: normal;
 
   margin: 2rem auto;
@@ -57,9 +56,10 @@ pre code {
 .imgcaption {
   max-width: 35rem; /* 0.7 of 50 */
   margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
-  /* font-size: x-small; */
+  font-family: sans-serif;
   font-size: small;
   text-align: center;
+   font-weight: lighter;
   line-height: 1.5;
 }
 
