--- a/about.html
+++ b/about.html
@@ -11,13 +11,15 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
 
-  <p><br>I develop realtime audiovisual softwares</p>
+<div>
+
+  <p>I develop realtime audiovisual softwares</p>
   <p>&#109;&#97;&#105;&#108;&#64;&#121;&#107;&#101;&#101;&#104;&#46;&#99;&#111;&#109;</p>
   <p><a target="_blank" rel="noopener noreferrer" href="pdf/Resume_Keehong_Youn.pdf">Resume</a>
 
