--- a/amp.html
+++ b/amp.html
@@ -11,11 +11,13 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
+
+<div>
   <h2>Amp</h2>
 
   <p>Digital world, especially the internet network, sometimes works as an amplifier that receives the input from the real world and sends back the amplified output to the real world.</p>
