--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
 <div class="list-container">
-
-  <br>
 
     <a href="balanced_movement2.html">
       <div class="list-title">Balanced Movement</div>
