--- a/slitscan.html
+++ b/slitscan.html
@@ -11,11 +11,13 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
+
+<div>
   <h2>Slitscan Interface</h2>
 
   <p>Observing the space front of a touch screen enables the touch screen to have an extra context for input. While normal touch screens only have TOUCHED/NOT_TOUCHED input variety, touch screen with multiple layered slit scanning can utilize the trajectory of fingertip. This Research was funded by Hyundai NGV.</p>
