--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -11,11 +11,13 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
+
+<div>
   <h2>Spherical Flocking</h2>
 
   <p>Flocking rules simulate behavior of fishes underwater. The scene gets rendered in full surrounding spherical viewport so that it can be projected onto the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere.</p>
