--- a/elascreen.html
+++ b/elascreen.html
@@ -11,11 +11,13 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
+
+<div>
   <h2>Elascreen</h2>
 
   <p>ElaScreen uses a elastic screen to give user a tangible experience with natural force feedback. It quite works similar to a 2D touchpad but enables 3-dimensional input by pressing and pulling action on the screen. It can be utilized for navigation of 3-dimensional information such as CAD models, and also for implementing force feedback on information visualization.</p>
