--- a/fragments.html
+++ b/fragments.html
@@ -11,11 +11,13 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
+
+<div>
   <h2>Fragments, with <a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">Rodger Luo</a></h2>
 
   <p>Quoting Rodger's description:</p>
