--- a/wavefront.html
+++ b/wavefront.html
@@ -11,11 +11,13 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    Keehong Youn
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="content-container">
+
+<div>
   <h2>Wavefront</h2>
 
   <p>
