font change again...

--- a/allosphere.html
+++ b/allosphere.html
@@ -23,11 +23,11 @@
 
     <img src="img/arg/arg03.jpg">
     
-    <p>
-    - Multi-projector (26) VR environment<br>
-    - Distributed stereoscopic rendering<br>
-    - Multi-channel (54.1) spatialized audio
-  </p>
+    <p><ul>
+    <li>Multi-projector (26) VR environment</li>
+    <li>Distributed stereoscopic rendering</li>
+    <li>Multi-channel (54.1) spatialized audio</li>
+    </ul></p>
   
     <p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent." (<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/AlloSphere">wikipedia</a>)</p>
 
