--- a/scivis.html
+++ b/scivis.html
@@ -21,10 +21,10 @@
 
     <h2>Scientific Visualization of Simulation Data in VR</h2>
 
-  <p>
-  - Stereoscopic rendering of 3D material simulation data<br>
-  - Simulatneously running on multiple displays of different kind: HMD VR, immersive VR, and desktop<br>
-  </p>
+  <p><ul>
+  <li>Stereoscopic rendering of 3D material simulation data</li>
+  <li>Simulatneously running on multiple displays of different kind: HMD VR, immersive VR, and desktop</li>
+  </ul></p>
 
       <img src="img/vdv/vdv01.png">
 
