--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -20,9 +20,9 @@
 <div>
   <h2>Balanced Movement</h2>
 
-  <p>
-  - Realtime digital video, Custom C++ software
-  </p>
+  <p><ul>
+  <li>Realtime digital video, Custom C++ software</li>
+  </ul></p>
 
   <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and erasing component.</p>
 
