--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -20,12 +20,12 @@
 <div>
     <h2>Balanced Movement</h2>
 
-    <p>
-    - Realtime audiovisual, Custom C++ software<br>
-    - Curved screen projection with 2 projectors<br>
-    - 3360 &#215; 1080 resolution video, 2 Channel audio<br>
-    - <a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/348973919">Video link (vimeo.com)</a>
-</p>
+    <p><ul>
+    <li>Realtime audiovisual, Custom C++ software</li>
+    <li>Curved screen projection with 2 projectors</li>
+    <li>3360 &#215; 1080 resolution video, 2 Channel audio</li>
+    <li><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/348973919">Video link (vimeo.com)</a></li>
+    </ul></p>
 
     <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
 
