--- a/wavefront.html
+++ b/wavefront.html
@@ -20,11 +20,11 @@
 <div>
   <h2>Wavefront</h2>
 
-  <p>
-  - Realtime audiovisual, Custom C++ software<br>
-  - Full immersice projection with 26 projectors<br>
-  - 54.1 spatialized Channel audio
-  </p>
+  <p><ul>
+  <li>Realtime audiovisual, Custom C++ software</li>
+  <li>Full immersice projection with 26 projectors</li>
+  <li>54.1 spatialized Channel audio</li>
+  </ul></p>
 
   <p>Wavefront is a full immersive audiovisual presented in <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere</a>. Three dimensional wavelets are designed with the inspiration from ocean waves. Then a large number of them are spawned in space, creating a complex scenary with the full surround visual and spatialized sound.</p>
 
