--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Keehong Youn</title>
 <link rel="stylesheet" href="style.css">
-  
+<link rel="stylesheet" href="style_main.css">
+
 </head>
 <body>
 
