--- a/dlang02.html
+++ b/dlang02.html
@@ -4,107 +4,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-html {
-    /* scrollbar hack #1 */
-    margin-left: calc(100vw - 100%);
-    margin-right: 0;
-
-    background-color: #F5F5F5;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  font-family: sans-serif;
-}
-
-body {
-  max-width: 45rem; /* 0.9 of 50 */
-
-  color: #303030;
-  font: medium serif;
-  line-height: 1.8;
-  font-weight: normal;
-
-  margin: 2rem auto;
-  padding: 0 0 10rem 0;
-}
-
-body img {
-  display: block;
-  max-width: 40rem; /* 0.8 of 50 */
-  margin: 0 auto;
-  padding: 0.5rem 0;
-}
-
-code {
-    font-family: monospace;
-    color: #202020;
-    background-color: #E0E0E0;
-    padding: 0.2rem 0.5rem;
-}
-
-pre code {
-    display: block;
-    line-height: 1.5;
-    padding: 1.0rem;
-    overflow-x: scroll;
-    white-space: pre;
-}
-
-.imgcaption {
-  max-width: 35rem; /* 0.7 of 50 */
-  margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
-  font-family: sans-serif;
-  font-size: small;
-  text-align: center;
-   font-weight: lighter;
-  line-height: 1.5;
-}
-
-.note {
-    font-family: monospace;
-    color: #202020;
-    background-color: #F0E080;
-    padding: 1rem;
-}
-
-/* scrollbar hack #2 */
-@media screen and (max-width: 50rem) {
-    body {
-        max-width: 90vw
-    }
-    body img {
-        max-width: 80vw;
-        margin: 0 auto;
-    }
-    .imgcaption {
-      max-width: 70vw;
-    }
-}
-
-@media print{
-    html {
-        margin: 0;
-    }
-    body {
-        max-width: 90%;
-        margin: 2rem auto;
-    }
-    body img {
-        max-width: 60%;
-        margin: 0 auto;
-    }
-    .imgcaption {
-      max-width: 50%;
-    }
-    pre code {
-        overflow-x: hidden;
-        white-space: pre-wrap;
-    }
-}
-</style>
+<link rel="stylesheet" href="style.css">
 
 <title>D lang 02: With C</title>
 </head>
@@ -112,7 +12,7 @@ pre code {
 
 <h1>D Language Series 02: Interfacing with C</h1>
 
-<p>Previously: <a target="_blank" rel="noopener noreferrer" href="dlang02.html">D Language Series 01: Project Setup</a></p>
+<p>Previously: <a href="dlang01.html">D Language Series 01: Project Setup</a></p>
 
 <p>Here a C++ code with C interface will be called from D application</p>
 
