change link bacground color

--- a/fragments.html
+++ b/fragments.html
@@ -19,7 +19,8 @@
 
 
 <div>
-  <h2>Fragments, with <a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">Rodger Luo</a></h2>
+  <h2>Fragments</h2>
+  <p>with <a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">Rodger Luo</a></p>
 
   <p>Quoting Rodger's description:</p>
 
