add server for testing, mod fonts, mod styling

--- a/allosphere.html
+++ b/allosphere.html
@@ -12,23 +12,21 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
 
     <h2>AlloSphere Research Group</h2>
 
     <img src="img/arg/arg03.jpg">
     
-    <p><ul>
+    <ul>
     <li>Multi-projector (26) VR environment</li>
     <li>Distributed stereoscopic rendering</li>
     <li>Multi-channel (54.1) spatialized audio</li>
-    </ul></p>
+    </ul>
   
     <p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent." (<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/AlloSphere">wikipedia</a>)</p>
 
@@ -45,7 +43,6 @@
     <img src="img/arg/arg02.jpeg">
     <div class="imgcaption">AlloPortal, a smaller scale curved projection environment built with AlloSphere technology</div>
 
-</div>
 
 </body>
 </html>
