--- a/amp.html
+++ b/amp.html
@@ -12,13 +12,10 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
-
-<div>
   <h2>Amp</h2>
 
   <p>Digital world, especially the internet network, sometimes works as an amplifier that receives the input from the real world and sends back the amplified output to the real world.</p>
@@ -27,6 +24,5 @@
 
   <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/68364214">Video link (vimeo.com)</a></p>
 
-</div>
 </body>
 </html>
