--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -12,21 +12,19 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
     <h2>Balanced Movement</h2>
 
-    <p><ul>
+    <ul>
     <li>Realtime audiovisual, Custom C++ software</li>
     <li>Curved screen projection with 2 projectors</li>
     <li>3360 &#215; 1080 resolution video, 2 Channel audio</li>
     <li><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/348973919">Video link (vimeo.com)</a></li>
-    </ul></p>
+    </ul>
 
     <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
 
@@ -34,7 +32,6 @@
     <p><img src="img/balmov/bm_eoys_01.jpg"></p>
     <p><img src="img/balmov/bm_eoys_02.jpg"></p>
 
-</div>
 
 </body>
 </html>
