--- a/drumthewall.html
+++ b/drumthewall.html
@@ -12,13 +12,11 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
   <h2>Drum The Wall</h2>
 
   <p>Interactive Media Facade, 2011 Seoul DMC Culture Open.</p>
@@ -26,7 +24,6 @@
   <p>Live performance data from electric drum is utilized for modifying facade image projected on a grid wall. The video below shows only part 1 (which I worked on) of the performance.</p>
 
     <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/78271003">Video link (vimeo.com)</a></p>
-</div>
 
 </body>
 </html>
