--- a/elascreen.html
+++ b/elascreen.html
@@ -12,13 +12,11 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
   <h2>Elascreen</h2>
 
   <p>ElaScreen uses a elastic screen to give user a tangible experience with natural force feedback. It quite works similar to a 2D touchpad but enables 3-dimensional input by pressing and pulling action on the screen. It can be utilized for navigation of 3-dimensional information such as CAD models, and also for implementing force feedback on information visualization.</p>
@@ -32,7 +30,6 @@
 
       <img src="img/elascreen/elascreen02.png">
 
-</div>
 
 </body>
 </html>
