--- a/fragments.html
+++ b/fragments.html
@@ -12,13 +12,10 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
-
-<div>
   <h2>Fragments</h2>
   <p>with <a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">Rodger Luo</a></p>
 
@@ -38,7 +35,6 @@
 
       <img src="img/frag/frag03.png">
 
-</div>
 
 </body>
 </html>
