--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
@@ -27,11 +26,6 @@
     <a href="wavefront.html">
       <img src="img/wavefront_preview.jpg">
       <div class="list-title">Wavefront</div>
-    </a>
-
-    <a href="scivis.html">
-      <img src="img/vdv_preview.jpg">
-      <div class="list-title">Scientific Visualization in VR</div>
     </a>
 
     <a href="reconstruction.html">
