--- a/page02.html
+++ b/page02.html
@@ -6,17 +6,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Keehong Youn</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style_main.css">
   
 </head>
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 <div class="list-container">
+
+    <a href="scivis.html">
+      <img src="img/vdv_preview.jpg">
+      <div class="list-title">Scientific Visualization in VR</div>
+    </a>
 
     <a href="allosphere.html">
       <img src="img/sphere_preview.png">
@@ -43,10 +48,6 @@
       <div class="list-title">Elascreen Interface</div>
     </a>
 
-    <a href="drumthewall.html">
-      <img src="img/drum_preview.png">
-      <div class="list-title">Drum The Wall</div>
-    </a>
 
 </div>
 
