--- a/reconstruction.html
+++ b/reconstruction.html
@@ -12,13 +12,11 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
   <h2>Reconstruction</h2>
 
   <p>
@@ -37,7 +35,6 @@
 
       <img src="img/recon/recon05.png">
 
-</div>
 
 </body>
 </html>
