--- a/scivis.html
+++ b/scivis.html
@@ -12,20 +12,16 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
-
-<div>
-
     <h2>Scientific Visualization of Simulation Data in VR</h2>
 
-  <p><ul>
+  <ul>
   <li>Stereoscopic rendering of 3D material simulation data</li>
   <li>Simulatneously running on multiple displays of different kind: HMD VR, immersive VR, and desktop</li>
-  </ul></p>
+  </ul>
 
       <img src="img/vdv/vdv01.png">
 
@@ -41,7 +37,6 @@
 
       <img src="img/vdv/vdv02.png">
 
-</div>
 
 </body>
 </html>
