--- a/slitscan.html
+++ b/slitscan.html
@@ -12,13 +12,11 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
   <h2>Slitscan Interface</h2>
 
   <p>Observing the space front of a touch screen enables the touch screen to have an extra context for input. While normal touch screens only have TOUCHED/NOT_TOUCHED input variety, touch screen with multiple layered slit scanning can utilize the trajectory of fingertip. This Research was funded by Hyundai NGV.</p>
@@ -30,7 +28,6 @@
       <img src="img/slitscan/slitscan02.png">
 
 
-</div>
 
 </body>
 </html>
