--- a/wavefront.html
+++ b/wavefront.html
@@ -12,8 +12,7 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
