--- a/about.html
+++ b/about.html
@@ -12,19 +12,15 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
-
-<div>
 
   <p>I develop realtime audiovisual softwares</p>
   <p>&#109;&#97;&#105;&#108;&#64;&#121;&#107;&#101;&#101;&#104;&#46;&#99;&#111;&#109;</p>
   <p><a target="_blank" rel="noopener noreferrer" href="pdf/Resume_Keehong_Youn.pdf">Resume</a>
 
-</div>
 
 </body>
 </html>
