--- a/ancient_stains.html
+++ b/ancient_stains.html
@@ -12,13 +12,10 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
-
-<div>
   <h2>Ancient Stains</h2>
 
   <p>Reaction and Diffusion of two chemicals (Barkley Turbulance) make a dynamic 3D pattern in space and will be observed with a kinetoscope. Kinetoscope sets up limited view pose and dark surroundings so that more spatial feeling than merely looking at a monitor is possible. Pixelized visual style combined with kinetoscope structure tries to present the act of observation in limited viewpoint and low resolution.</p>
@@ -30,7 +27,6 @@
   <img src="img/stains/stains02.png">
 
 
-</div>
 
 </body>
 </html>
