--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -12,13 +12,11 @@
 <body>
 
 <nav>
-    Keehong Youn
-    <a href="index.html">Home</a>
+    <a href="index.html">Keehong Youn</a>
     <a href="about.html">About</a>
 </nav>
 
 
-<div>
   <h2>Spherical Flocking</h2>
 
   <p>Flocking rules simulate behavior of fishes underwater. The scene gets rendered in full surrounding spherical viewport so that it can be projected onto the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere.</p>
@@ -29,7 +27,6 @@
 
       <img src="img/flocking/flocking02.png">
 
-</div>
 
 </body>
 </html>
