--- a/page02.html
+++ b/page02.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Keehong Youn</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style_main.css">
   
