change page title and nav name

--- a/page02.html
+++ b/page02.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Keehong Youn</title>
+<title>ykeeh</title>
 <link href=https://fonts.googleapis.com/css2?family=Noto+Serif&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style_main.css">
@@ -13,7 +13,7 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>
+    <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
