--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Keehong Youn</title>
+<title>ykeeh</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style_main.css">
 
@@ -12,11 +12,10 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>
+    <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
-
-
+  <p>Keehong Youn</p>
   <p>I develop realtime audiovisual softwares</p>
   <p>&#109;&#97;&#105;&#108;&#64;&#121;&#107;&#101;&#101;&#104;&#46;&#99;&#111;&#109;</p>
   <p><a target="_blank" rel="noopener noreferrer" href="pdf/Resume_Keehong_Youn.pdf">Resume</a>
