--- a/drumthewall.html
+++ b/drumthewall.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Keehong Youn</title>
+<title>ykeeh</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style_main.css">
 
@@ -12,7 +12,7 @@
 <body>
 
 <nav>
-    <a href="index.html">Keehong Youn</a>
+    <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
