--- a/fragments.html
+++ b/fragments.html
@@ -4,37 +4,32 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>Fragments</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-  <h2>Fragments</h2>
-  <p>with <a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">Rodger Luo</a></p>
-
-  <p>Quoting Rodger's description:</p>
-
-  <p>"Fragments is a multi-viewpoint video aiming to reformulate 2d image from 3d space and to create new approaches for future storytelling. This project provides a unique experience for the audience to observe a real-time multi-viewpoint video, which is produced by mixing three different videos using OpenGL shader functionality and a lenticular film. The rendering of each video involves capturing one common object from many different perspectives."</p>
-
-  <p>"In terms of the object, the process begins with randomly taking segmentations in 3D space followed by a modified Convex Hull algorithm to create an asymmetric structure with different regions of the image (the scene) textured on each panel. Using fragmented pieces of the scene introduces a method in cubism: combining different perspectives in one view. Each fragment transforms in time with controlled parameters, providing a dynamic scene. With fragments of the scene not only changing by themselves but also by the position of the audience, this work shows tries to reveal hidden aesthetics of a scene. By stitching fragments that change over time and space, one could observe different aspects the original scene."</p>
-
-    <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/171193854">Video link 1 (vimeo.com)</a></p>
-    <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/191299579">Video link 2 (vimeo.com)</a></p>
-
-
-      <img src="img/frag/frag01.png">
-
-      <img src="img/frag/frag02.png">
-
-      <img src="img/frag/frag03.png">
-
+<h1>Fragments</h1>
+<p>with Jieliang(Rodger) Luo (<a href="http://rodgerluo.com">http://rodgerluo.com</a>)</p>
+<p>Quoting Rodger's description:</p>
+<blockquote>
+<p>Fragments is a multi-viewpoint video aiming to reformulate 2d image from 3d space and to create new approaches for future storytelling. This project provides a unique experience for the audience to observe a real-time multi-viewpoint video, which is produced by mixing three different videos using OpenGL shader functionality and a lenticular film. The rendering of each video involves capturing one common object from many different perspectives.</p>
+<p>In terms of the object, the process begins with randomly taking segmentations in 3D space followed by a modified Convex Hull algorithm to create an asymmetric structure with different regions of the image (the scene) textured on each panel. Using fragmented pieces of the scene introduces a method in cubism: combining different perspectives in one view. Each fragment transforms in time with controlled parameters, providing a dynamic scene. With fragments of the scene not only changing by themselves but also by the position of the audience, this work shows tries to reveal hidden aesthetics of a scene. By stitching fragments that change over time and space, one could observe different aspects the original scene.</p>
+</blockquote>
+<p>Video 1: <a href="https://vimeo.com/171193854">https://vimeo.com/171193854</a><br>
+Video 2: <a href="https://vimeo.com/191299579">https://vimeo.com/191299579</a></p>
+<p><img alt="" src="img/frag/frag01.png"></p>
+<p><img alt="" src="img/frag/frag02.png"></p>
+<p><img alt="" src="img/frag/frag03.png"></p>
 
 </body>
 </html>
