--- a/index.html
+++ b/index.html
@@ -4,55 +4,32 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>index</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-<div class="list-container">
-
-    <a href="balanced_movement2.html">
-      <img src="img/balmov2_preview.png">
-      <div class="list-title">Balanced Movement</div>
-    </a>
-
-    <a href="wavefront.html">
-      <img src="img/wavefront_preview.jpg">
-      <div class="list-title">Wavefront</div>
-    </a>
-
-    <a href="reconstruction.html">
-      <img src="img/recon_preview.png">
-      <div class="list-title">Reconstruction</div>
-    </a>
-
-    <a href="fragments.html">
-      <img src="img/frag_preview.png">
-      <div class="list-title">Fragments</div>
-    </a>
-
-    <a href="ancient_stains.html">
-      <img src="img/stains_preview.png">
-      <div class="list-title">Ancient Stains</div>
-    </a>
-
-    <a href="spherical_flocking.html">
-      <img src="img/flocking_preview.png">
-      <div class="list-title">Spherical Flocking</div>
-    </a>
-
-</div>
-
-<div class="page_nav">
-[1] <a href="page02.html">[2]</a>
-</div>
+<p><a href="Balanced_Movement.html">Balanced Movement</a>
+<a href="Balanced_Movement.html"><img alt="" src="img/balmov2_preview.png"></a></p>
+<p><a href="Wavefront.html">Wavefront</a>
+<a href="Wavefront.html"><img alt="" src="img/wavefront_preview.jpg"></a></p>
+<p><a href="Reconstruction.html">Reconstruction</a>
+<a href="Reconstruction.html"><img alt="" src="img/recon_preview.png"></a></p>
+<p><a href="Fragments.html">Fragments</a>
+<a href="Fragments.html"><img alt="" src="img/frag_preview.png"></a></p>
+<p><a href="AlloSphere.html">AlloSphere Research Group</a>
+<a href="AlloSphere.html"><img alt="" src="img/sphere_preview.png"></a></p>
+<p><a href="Spherical_Flocking.html">Spherical Flocking</a>
+<a href="Spherical_Flocking.html"><img alt="" src="img/flocking_preview.png"></a></p>
 
 </body>
 </html>
