--- a/old/page02.html
+++ b/old/page02.html
@@ -7,7 +7,7 @@
 <title>ykeeh</title>
 <link href=https://fonts.googleapis.com/css2?family=Noto+Serif&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
+<link rel="stylesheet" href="style2.css">
   
 </head>
 <body>
