--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -4,29 +4,25 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>Spherical Flocking</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-
-  <h2>Spherical Flocking</h2>
-
-  <p>Flocking rules simulate behavior of fishes underwater. The scene gets rendered in full surrounding spherical viewport so that it can be projected onto the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere.</p>
-
-  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/131404811">Video link (vimeo.com)</a></p>
-
-      <img src="img/flocking/flocking01.png">
-
-      <img src="img/flocking/flocking02.png">
-
+<h1>Spherical Flocking</h1>
+<p>Flocking rules simulate behavior of fishes underwater. The scene gets rendered in full surrounding spherical viewport so that it can be projected onto the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere.</p>
+<p>Video: <a href="https://vimeo.com/131404811">https://vimeo.com/131404811</a></p>
+<p><img alt="" src="img/flocking/flocking01.png"></p>
+<p><img alt="" src="img/flocking/flocking02.png"></p>
 
 </body>
 </html>
