--- a/wavefront.html
+++ b/wavefront.html
@@ -4,40 +4,35 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>Wavefront</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-
-<div>
-  <h2>Wavefront</h2>
-
-  <p><ul>
-  <li>Realtime audiovisual, Custom C++ software</li>
-  <li>Full immersice projection with 26 projectors</li>
-  <li>54.1 spatialized Channel audio</li>
-  </ul></p>
-
-  <p>Wavefront is a full immersive audiovisual presented in <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere</a>. Three dimensional wavelets are designed with the inspiration from ocean waves. Then a large number of them are spawned in space, creating a complex scenary with the full surround visual and spatialized sound.</p>
-
-
-      <img src="img/wavefront/wf_01.jpg">
-
-      <img src="img/wavefront/wf_02.jpg">
-
-      <img src="img/wavefront/wf_03.jpg">
-
-      <img src="img/wavefront/wf_04.jpg">
-
-</div>
+<h1>Wavefront</h1>
+<ul>
+<li>Realtime audiovisual, Custom C++ software</li>
+<li>Full immersice projection with 26 projectors</li>
+<li>54.1 spatialized Channel audio</li>
+</ul>
+<p>Wavefront is a full immersive audiovisual presented in AlloSphere [1]. Three dimensional wavelets are designed with the inspiration from ocean waves. Then a large number of them are spawned in space, creating a complex scenary with the full surround visual and spatialized sound.</p>
+<p><img alt="" src="img/wavefront/wf_01.jpg"></p>
+<p><img alt="" src="img/wavefront/wf_03.jpg"></p>
+<p><img alt="" src="img/wavefront/wf_04.jpg"></p>
+<p><img alt="" src="img/wavefront/wf_02.jpg"></p>
+<hr>
+<ol>
+<li><a href="http://www.allosphere.ucsb.edu">http://www.allosphere.ucsb.edu</a></li>
+</ol>
 
 </body>
 </html>
