--- a/allosphere.html
+++ b/allosphere.html
@@ -4,45 +4,42 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>AlloSphere</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-
-
-    <h2>AlloSphere Research Group</h2>
-
-    <img src="img/arg/arg03.jpg">
-    
-    <ul>
-    <li>Multi-projector (26) VR environment</li>
-    <li>Distributed stereoscopic rendering</li>
-    <li>Multi-channel (54.1) spatialized audio</li>
-    </ul>
-  
-    <p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent." (<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/AlloSphere">wikipedia</a>)</p>
-
-    <p>I've been working at <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere Research Group</a> from 2015 to 2018, as a graduate student researcher. I was involved in projects such as <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/temap.html">TEM/AP Visualization</a> or <a target="_blank", rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/quantum.html">Electron wavefunction visualization & sonification</a>, and I also worked as the main developer for the codebase of the AlloSphere research group: <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/allolib">Allolib</a>. I worked on every part of the codebase especially the built system and stereoscopic rendering pipeline for projection mappings.</p>
-
-    <p><a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/AlloSystem">AlloSystem</a> is a C++ framework providing similar but different functionalities when compared to OpenFrameworks or Cinder. AlloSystem has built-in spherical projection support that can greatly faciliate creating content for the AlloSphere. Allolib is a fork of AlloSystem recently initiated, integrating higer version of OpenGL, cleaning up CMake build system with better support for Visual Studio, <a target="_blank" rel="noopener noreferrer" href="https://github.com/ocornut/imgui">Dear ImGUI</a> integration for user GUI, and better handling of dependencies.</p>
-
-    <img src="img/arg/arg04.jpeg">
-    <div class="imgcaption">A view from top, professor JoAnn Kuchera-Morin, the director of AlloSphere Research Group interacting with the AlloSphere</div>
-
-    <img src="img/arg/arg01.jpg">
-    <div class="imgcaption">Web GUI and Gesture based control interface for AlloSphere</div>
-
-    <img src="img/arg/arg02.jpeg">
-    <div class="imgcaption">AlloPortal, a smaller scale curved projection environment built with AlloSphere technology</div>
-
+<h1>AlloSphere Research Group</h1>
+<ul>
+<li>Multi-projector (26) VR environment</li>
+<li>Distributed stereoscopic rendering</li>
+<li>Multi-channel (54.1) spatializaed audio</li>
+</ul>
+<p><img alt="AlloSphere birds eye view" src="img/arg/arg03.jpg"></p>
+<p>From Wikipedia [1]:</p>
+<blockquote>
+<p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent."</p>
+</blockquote>
+<p>I've been working at AlloSphere Research Group [2] from 2015 to 2018, as a graduate student researcher. I was involved in projects such as TEM/AP Visualization or Electron wavefunction visualization &amp; sonification, and I also worked as the main developer for the codebase of the AlloSphere research group: Allolib. I worked on every part of the codebase especially the built system and stereoscopic rendering pipeline for projection mappings.</p>
+<p><img alt="View of inside" src="img/arg/arg04.jpeg"></p>
+<p><img alt="View of inside" src="img/arg/arg01.jpg">
+<em>Web GUI and Gesture based control interface for AlloSphere</em></p>
+<p><img alt="View of inside" src="img/arg/arg02.jpeg">
+<em>AlloPortal, a smaller scale curved projection environment built with AlloSphere technology</em></p>
+<hr>
+<ol>
+<li><a href="https://en.wikipedia.org/wiki/AlloSphere">https://en.wikipedia.org/wiki/AlloSphere</a></li>
+<li><a href="http://www.allosphere.ucsb.edu">http://www.allosphere.ucsb.edu</a></li>
+</ol>
 
 </body>
 </html>
