--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -4,31 +4,32 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>Balanced Movement</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-  <h2>Balanced Movement</h2>
-
-  <ul>
-  <li>Realtime digital video, Custom C++ software</li>
-  </ul>
-
-  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and erasing component.</p>
-
-  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/181492060">Video link (vimeo.com)</a></p>
-
-      <img src="img/balmov/balmov01.png">
-      <img src="img/balmov/balmov04.png">
-
+<h1>Balanced Movement</h1>
+<ul>
+<li>Realtime audiovisual, Custom C++ software</li>
+<li>Curved screen projection with 2 projectors</li>
+</ul>
+<p>Through stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and erasing component.</p>
+<p><img alt="" src="img/balmov/balmov_zero.png"></p>
+<p>Video: <a href="https://vimeo.com/181492060">https://vimeo.com/181492060</a></p>
+<p>In 2019 a second iteration of Balanced Movement was created with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
+<p><img alt="" src="img/balmov/bm3.png"></p>
+<p><img alt="" src="img/balmov/bm_eoys_01.jpg"></p>
+<p><img alt="" src="img/balmov/bm_eoys_02.jpg"></p>
 
 </body>
 </html>
