--- a/old/elascreen.html
+++ b/old/elascreen.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ykeeh</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
+<link rel="stylesheet" href="style2.css">
 
 </head>
 <body>
