--- a/reconstruction.html
+++ b/reconstruction.html
@@ -4,37 +4,28 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ykeeh</title>
+
+<title>Reconstruction</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style_main.css">
 
 </head>
 <body>
+
+
 
 <nav>
     <a href="index.html">Works</a>
     <a href="about.html">About</a>
 </nav>
 
-
-  <h2>Reconstruction</h2>
-
-  <p>
-  Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. The characteristic function written for this work takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.
-  </p>
-
-  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/268367559">Video link (vimeo.com)</a></p>
-
-      <img src="img/recon/recon01.png">
-
-      <img src="img/recon/recon02.png">
-
-      <img src="img/recon/recon03.png">
-
-      <img src="img/recon/recon04.png">
-
-      <img src="img/recon/recon05.png">
-
+<h1>Reconstruction</h1>
+<p>Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. The characteristic function written for this work takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.</p>
+<p>Video: <a href="https://vimeo.com/268367559">https://vimeo.com/268367559</a></p>
+<p><img alt="" src="img/recon/recon01.png"></p>
+<p><img alt="" src="img/recon/recon02.png"></p>
+<p><img alt="" src="img/recon/recon03.png"></p>
+<p><img alt="" src="img/recon/recon04.png"></p>
+<p><img alt="" src="img/recon/recon05.png"></p>
 
 </body>
 </html>
